Also added animation for the submit button and fixed its styling.
To-Do: implement a reset blurCount functionality for the contact form (after submitting a message, error messages appear under the inputs, since the blur counter is greater than 0 and the cleared inputs don't pass validation).

--- a/src/index.css
+++ b/src/index.css
@@ -99,9 +99,9 @@ Hover links animation
   display: block;
   position: absolute;
   width: 0;
-  left: -15%;
+  left: -19%;
   top: 0;
-  height: 135%;
+  height: 155%;
   background: rgba(45, 45, 45, 0.6);
   transform: skew(-45deg);
   z-index: -1;
@@ -749,8 +749,15 @@ CONTACT INPUTS
   grid-row: 3/4;
 }
 
+#contact-submit-input {
+  background-color: transparent;
+  border: 1.2px solid rgba(45,45,45,0.5);
+  color: rgb(46, 46, 46);
+}
+
 #contact-submit-input[disabled] {
   background-color: rgb(200, 200, 200);
+  border: 1.5px solid rgb(46,46,46);
   color: rgb(46, 46, 46);
   cursor: not-allowed;
 }
@@ -777,7 +784,6 @@ CONTACT INPUTS
 }
 
 #about-us-inputs .submit {
-  color: rgb(248, 248, 248);
   font-weight: 300;
   text-transform: uppercase;
   font-family: inherit;
@@ -785,7 +791,6 @@ CONTACT INPUTS
   padding: 15px 0;
   margin: 10px auto;
   width: 40%;
-  border: none;
 }
 
 #about-us-inputs input.validate-error,
